--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,27 @@
         <aspectj>1.9.4</aspectj>
         <jjwt>0.9.1</jjwt>
         <jaxb-api>2.3.1</jaxb-api>
+        <aliyun.sdk.oss.version>3.17.4</aliyun.sdk.oss.version>
         <poi>3.16</poi>
     </properties>
     <dependencyManagement>
         <dependencies>
+
+            <!--阿里云OSS的依赖-->
+            <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>
+                    ${aliyun.sdk.oss.version}
+                </version>
+            </dependency>
+
+            <!-- <dependency>
+                <groupId>com.aliyun.oss</groupId>
+                <artifactId>aliyun-sdk-oss</artifactId>
+                <version>${aliyun.sdk.oss}</version>
+            </dependency>-->
+
             <dependency>
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
@@ -93,11 +110,7 @@
                 <version>${jjwt}</version>
             </dependency>
 
-            <dependency>
-                <groupId>com.aliyun.oss</groupId>
-                <artifactId>aliyun-sdk-oss</artifactId>
-                <version>${aliyun.sdk.oss}</version>
-            </dependency>
+
 
             <dependency>
                 <groupId>javax.xml.bind</groupId>
