--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -37,3 +37,10 @@ sky:
     admin-ttl: 7200000
     # 设置前端传递过来的令牌名称
     admin-token-name: token
+
+
+aliyun:
+  oss:
+    endpoint: https://oss-us-west-1.aliyuncs.com
+    bucketName: java-ai-giotto
+    region: us-west-1
